# configprops

./: LICENSE  README.md  README.rst  pyproject.toml  script.sh  setup.py
configprops/: __init__.py  main.py
tests/: test_configprops.py
