[tool.poetry]
name = "configprops"
version = "1.5.0"
description = "This package provides a configuration base class to be extended with list of KEYS (same prefix) that could be overridden by environment variables."
license = "MIT"
authors = ["Xu Yijun <xuyijun@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tommyxu/configprops"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
prettytable = "^2.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
ipython = "^7.17.0"
pytest = "^6.0.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
